# ChangeLog for dev-lang/tcl
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/tcl/ChangeLog,v 1.152 2012/03/10 16:12:27 jlec Exp $

  10 Mar 2012; Justin Lecher <jlec@gentoo.org> tcl-8.5.10-r1.ebuild:
  Backport to version in stabilization

  10 Mar 2012; Petteri Räty <betelgeuse@gentoo.org> tcl-8.5.11.ebuild:
  Use EAPI 4 to make use of REPLACING_VERSIONS which enables us to show
  pkg_postinst warnings only when they are needed.

  06 Mar 2012; Jeroen Roovers <jer@gentoo.org> tcl-8.5.10-r1.ebuild:
  Stable for HPPA (bug #406607).

*tcl-8.5.10-r1 (06 Mar 2012)

  06 Mar 2012; Justin Lecher <jlec@gentoo.org> -tcl-8.5.10.ebuild,
  +tcl-8.5.10-r1.ebuild:
  Revbump to force rebuild, which is needed because of the removed static
  archives

  06 Mar 2012; Fabian Groffen <grobian@gentoo.org> tcl-8.5.10.ebuild,
  tcl-8.5.11.ebuild:
  Fix logix after added || die from rev 1.4, thanks Charles Davis in bug #407059

  05 Mar 2012; Agostino Sarubbo <ago@gentoo.org> tcl-8.5.10.ebuild:
  Stable for amd64, wrt bug #406607

  04 Mar 2012; Justin Lecher <jlec@gentoo.org> tcl-8.5.10.ebuild,
  tcl-8.5.11.ebuild:
  Revert static-libs handling, #406905; push changes from 8.5.10 to .11

  02 Mar 2012; Brent Baude <ranger@gentoo.org> tcl-8.5.10.ebuild:
  Marking tcl-8.5.10 ppc64 for bug 406607

  02 Mar 2012; Justin Lecher <jlec@gentoo.org> tcl-8.5.10.ebuild:
  Add missing dies, remove unnessecary dies, handle static-libs

  02 Mar 2012; Justin Lecher <jlec@gentoo.org> +tcl-8.5.11.ebuild:
  Version Bump

*tcl-8.5.11 (02 Mar 2012)

  02 Mar 2012; Justin Lecher <jlec@gentoo.org> +tcl-8.5.11.ebuild:
  Version Bump

  04 Jan 2012; Brent Baude <ranger@gentoo.org> tcl-8.5.10.ebuild:
  Marking tcl-8.5.10 ppc for bug 280934

  29 Nov 2011; Fabian Groffen <grobian@gentoo.org> tcl-8.5.10.ebuild:
  Fix installation on FreeMiNT (bug #390545), use get_libname for shared library
  extension, keyworded ~x64-macos
