@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/tk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/tk/ChangeLog,v 1.164 2012/03/06 18:12:12 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/tk/ChangeLog,v 1.165 2012/03/11 07:35:36 jdhore Exp $
+
+  11 Mar 2012; Jeff Horelick <jdhore@gentoo.org> tk-8.5.10-r1.ebuild:
+  marked x86 per bug 406607
 
   06 Mar 2012; Jeroen Roovers <jer@gentoo.org> tk-8.5.10-r1.ebuild:
   Stable for HPPA (bug #406607).
