@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/tcl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/tcl/ChangeLog,v 1.152 2012/03/10 16:12:27 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/tcl/ChangeLog,v 1.153 2012/03/11 07:36:32 jdhore Exp $
+
+  11 Mar 2012; Jeff Horelick <jdhore@gentoo.org> tcl-8.5.10-r1.ebuild:
+  marked x86 per bug 406607
 
   10 Mar 2012; Justin Lecher <jlec@gentoo.org> tcl-8.5.10-r1.ebuild:
   Backport to version in stabilization
